--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>jcifs-ng</artifactId>
             <version>2.1.4</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.contentobjects.jnotify/jnotify -->
+        <dependency>
+            <groupId>net.contentobjects.jnotify</groupId>
+            <artifactId>jnotify</artifactId>
+            <version>0.94</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
